implemented TransactionsController pagination, minor documentation changes
